--- a/preprocessing/preprocess_reg.ipynb
+++ b/preprocessing/preprocess_reg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -225,12 +225,12 @@
     "        print('There are no outliers in the data.')\n",
     "        return df\n",
     "\n",
-    "df_train_resampled = checkimbalance(df_train_correlation, 'Final_Output_Reg_train.csv')"
+    "df_train_filtered = checkimbalance(df_train_correlation, 'Final_Output_Reg_train.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('Final_Output_Reg_train.csv')\n",
+    "df = df_train_filtered.copy()\n",
     "\n",
     "plt.figure(figsize=(8, 5))\n",
     "sns.boxplot(df['Offer To 1st Close'], orient='h' , color='lightblue')\n",
