--- a/data-exploration/initial_data_exploration.ipynb
+++ b/data-exploration/initial_data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "02253a5c-ce9d-4bfd-9077-3ccafd6a06e6",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,6 @@
     }
    ],
    "source": [
-    "# Re-load necessary libraries\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -75,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "ddab97f4",
    "metadata": {},
    "outputs": [
@@ -346,7 +345,7 @@
        "max             112.000000          14.800000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "beeeda50",
    "metadata": {},
    "outputs": [
@@ -393,7 +392,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "ceac34dd",
    "metadata": {},
    "outputs": [
@@ -414,7 +413,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "34d6688d",
    "metadata": {},
    "outputs": [
@@ -461,7 +460,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "e21f5249",
    "metadata": {},
    "outputs": [
@@ -492,7 +491,7 @@
     "\n",
     "missing_percentages = missing_percentages.sort_values(ascending=False)\n",
     "    \n",
-    "plt.figure(figsize=(12, 8))\n",
+    "plt.figure(figsize=(12, 8), facecolor='white')\n",
     "ax = missing_percentages.plot(kind='bar')\n",
     "plt.title('Percentage of Missing Values by Column')\n",
     "plt.xlabel('Columns')\n",
@@ -509,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "155956f0-50a2-4845-94db-e87bcd63048e",
    "metadata": {},
    "outputs": [
