--- a/data_analysis/regression.ipynb
+++ b/data_analysis/regression.ipynb
@@ -268,6 +268,9 @@
    "outputs": [],
    "source": [
     "def display_distribution(df_dev_filtered, df_dev_correlation):\n",
+    "    \"\"\"\n",
+    "    Display distribution of target variable before and after removing outliers.\n",
+    "    \"\"\"\n",
     "    df_no_outliers = df_dev_filtered.copy()\n",
     "    df_with_outliers = df_dev_correlation.copy()\n",
     "\n",
