--- a/data_analysis/regression.ipynb
+++ b/data_analysis/regression.ipynb
@@ -387,7 +387,7 @@
     "                    mp[\"model\"], \n",
     "                    mp[\"params\"], \n",
     "                    cv=5, \n",
-    "                    scoring='r2', \n",
+    "                    scoring='neg_mean_squared_error',\n",
     "                    n_jobs=-1,\n",
     "                    verbose=0\n",
     "                )\n",
@@ -400,7 +400,8 @@
     "                print(\"✓ (No tuning needed)\")\n",
     "            \n",
     "            # Cross-validation scores\n",
-    "            cv_scores = cross_val_score(best_model, X_train, y_train, cv=5, scoring='r2')\n",
+    "            cv_scores = cross_val_score(best_model, X_train, y_train, cv=5, scoring='neg_mean_squared_error')\n",
+    "            cv_scores = -cv_scores\n",
     "            \n",
     "            y_pred = best_model.predict(X_val)\n",
     "            r2 = r2_score(y_val, y_pred)\n",
@@ -410,23 +411,27 @@
     "            \n",
     "            results.append({\n",
     "                \"Model\": name,\n",
-    "                \"R² Score\": r2,\n",
-    "                \"MAE\": mae,\n",
     "                \"MSE\": mse,\n",
     "                \"RMSE\": rmse,\n",
-    "                \"CV R² Mean\": cv_scores.mean(),\n",
-    "                \"CV R² Std\": cv_scores.std()\n",
+    "                \"MAE\": mae,\n",
+    "                \"R² Score\": r2,\n",
+    "                \"CV MSE Mean\": cv_scores.mean(),\n",
+    "                \"CV MSE Std\": cv_scores.std()\n",
     "            })\n",
     "            \n",
     "            # Plot learning curves\n",
     "            train_sizes, train_scores, val_scores = learning_curve(\n",
-    "                best_model, X_train, y_train, cv=5, scoring='r2',\n",
+    "                best_model, X_train, y_train, cv=5, scoring='neg_mean_squared_error',\n",
     "                train_sizes=np.linspace(0.1, 1.0, 10)\n",
     "            )\n",
     "            \n",
+    "            # Convert scores to positive MSE\n",
+    "            train_scores = -train_scores\n",
+    "            val_scores = -val_scores\n",
+    "            \n",
     "            plt.figure(figsize=(10, 6))\n",
-    "            plt.plot(train_sizes, train_scores.mean(axis=1), label='Training score')\n",
-    "            plt.plot(train_sizes, val_scores.mean(axis=1), label='Cross-validation score')\n",
+    "            plt.plot(train_sizes, train_scores.mean(axis=1), label='Training MSE')\n",
+    "            plt.plot(train_sizes, val_scores.mean(axis=1), label='Cross-validation MSE')\n",
     "            plt.fill_between(train_sizes, \n",
     "                           train_scores.mean(axis=1) - train_scores.std(axis=1),\n",
     "                           train_scores.mean(axis=1) + train_scores.std(axis=1),\n",
@@ -437,12 +442,12 @@
     "                           alpha=0.1)\n",
     "            plt.title(f'Learning Curves - {name}')\n",
     "            plt.xlabel('Training examples')\n",
-    "            plt.ylabel('R² Score')\n",
+    "            plt.ylabel('Mean Squared Error')\n",
     "            plt.legend()\n",
     "            plt.grid(True)\n",
     "            plt.show()\n",
     "            \n",
-    "            # Plot feature importance for tree-based models, if applicable\n",
+    "            # Plot feature importance for tree-based models\n",
     "            if hasattr(best_model, 'feature_importances_'):\n",
     "                importances = best_model.feature_importances_\n",
     "                indices = np.argsort(importances)[::-1]\n",
@@ -455,7 +460,12 @@
     "                \n",
     "        except Exception as e:\n",
     "            print(f\"✗ Error with {name}: {str(e)}\")\n",
-    "            continue"
+    "            continue\n",
+    "    \n",
+    "    results_df = pd.DataFrame(results)\n",
+    "    top5_models_df = results_df.sort_values(by=\"MSE\", ascending=True).head(5).reset_index(drop=True)\n",
+    "    \n",
+    "    return results_df, top5_models_df"
    ]
   },
   {
