--- a/data_analysis/regression.ipynb
+++ b/data_analysis/regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,18 +94,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def encoding(df):\n",
     "    \"\"\"\n",
-    "    Split the DataFrame into development and testing sets. \n",
-    "    \n",
-    "    Fill missing values with the mode for categorical \n",
+    "    Split the DataFrame into development and testing sets.\n",
+    "\n",
+    "    Fill missing values with the mode for categorical\n",
     "    columns and the mean for numerical columns.\n",
     "\n",
-    "    Encode columns in the DataFrame: \n",
+    "    Encode columns in the DataFrame:\n",
     "\n",
     "      - Categorical columns are encoded using OneHotEncoder.\n",
     "      - Numerical columns are scaled using StandardScaler.\n",
@@ -113,10 +113,12 @@
     "\n",
     "    Create df_dev and df_test using the transformed features.\n",
     "    \"\"\"\n",
+    "\n",
     "    X = df.drop(columns=['Offer To 1st Close'])\n",
     "    y = df['Offer To 1st Close']\n",
     "\n",
     "    X_dev, X_test, y_dev, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
     "\n",
     "    for col in X_dev.columns:\n",
     "        if X_dev[col].dtype == 'object':\n",
@@ -128,10 +130,13 @@
     "            X_dev[col] = X_dev[col].fillna(mean)\n",
     "            X_test[col] = X_test[col].fillna(mean)\n",
     "\n",
-    "    oe_columns = ['Trade Month', 'Trade Day', 'Trade Year'] \n",
+    "    # Validate no missing values\n",
+    "    assert not X_dev.isnull().any().any(), \"Missing values found in development set\"\n",
+    "    assert not X_test.isnull().any().any(), \"Missing values found in test set\"\n",
+    "\n",
+    "    oe_columns = ['Trade Month', 'Trade Day', 'Trade Year']\n",
     "    ohe_columns = ['Industry Sector', 'Industry Group', 'Industry Subgroup']\n",
     "    ss_columns = [col for col in X.select_dtypes(exclude=['object']).columns if col not in oe_columns]\n",
-    "\n",
     "\n",
     "    oe = OrdinalEncoder()\n",
     "    ohe = OneHotEncoder(drop='first', sparse_output=False, handle_unknown='ignore')\n",
@@ -154,6 +159,12 @@
     "    df_dev['Offer To 1st Close'] = y_dev.reset_index(drop=True)\n",
     "    df_test['Offer To 1st Close'] = y_test.reset_index(drop=True)\n",
     "\n",
+    "    # Final validation\n",
+    "    assert not df_dev.isnull().any().any(), \"Missing values found in development set\"\n",
+    "    assert not df_test.isnull().any().any(), \"Missing values found in test set\"\n",
+    "    assert len(df_dev.columns) == len(df_test.columns), \"Mismatch in number of features\"\n",
+    "    assert 'Offer To 1st Close' in df_dev.columns and 'Offer To 1st Close' in df_test.columns, \"Target column missing\"\n",
+    "\n",
     "    return df_dev, df_test\n",
     "\n",
     "\n",
@@ -173,7 +184,6 @@
     "    X_dev = df_dev.drop(columns=['Offer To 1st Close'])\n",
     "    y_dev = df_dev['Offer To 1st Close']\n",
     "    \n",
-    "    # Calculate feature importance using a simple model\n",
     "    rf = RandomForestRegressor(random_state=42)\n",
     "    rf.fit(X_dev, y_dev)\n",
     "    importances = pd.Series(rf.feature_importances_, index=X_dev.columns)\n",
@@ -220,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,24 +382,13 @@
     "                \"C\": [0.1, 1, 10],\n",
     "                \"gamma\": [\"scale\", \"auto\"]\n",
     "            }\n",
-    "        },\n",
-    "        \"LightGBM\": {\n",
-    "            \"model\": LGBMRegressor(random_state=42, n_jobs=-1),\n",
-    "            \"params\": {\n",
-    "                \"n_estimators\": [100, 200, 500],\n",
-    "                \"learning_rate\": [0.001, 0.01, 0.1],\n",
-    "                \"max_depth\": [3, 5, 7, -1],\n",
-    "                \"num_leaves\": [15, 31, 63],\n",
-    "                \"subsample\": [0.8, 0.9, 1.0],\n",
-    "                \"verbosity\": [-1]  \n",
-    "            }\n",
     "        }\n",
     "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +421,7 @@
     "                print(\"✓ (No tuning needed)\")\n",
     "\n",
     "            # Cross-validation scores using RMSE\n",
-    "            cv_scores = cross_val_score(best_model, X_train, y_train, cv=5, \n",
+    "            cv_scores = cross_val_score(best_model, X_train, y_train, cv=5,\n",
     "                                      scoring='neg_root_mean_squared_error')\n",
     "            cv_scores = -cv_scores\n",
     "\n",
@@ -442,7 +441,7 @@
     "\n",
     "            # Plot learning curves using RMSE\n",
     "            train_sizes, train_scores, val_scores = learning_curve(\n",
-    "                best_model, X_train, y_train, cv=5, \n",
+    "                best_model, X_train, y_train, cv=5,\n",
     "                scoring='neg_root_mean_squared_error',\n",
     "                train_sizes=np.linspace(0.1, 1.0, 10)\n",
     "            )\n",
@@ -469,6 +468,17 @@
     "            plt.grid(True)\n",
     "            plt.show()\n",
     "\n",
+    "            # Plot residual plots\n",
+    "            residuals = y_val - y_pred\n",
+    "            plt.figure(figsize=(10, 6))\n",
+    "            plt.scatter(y_pred, residuals, alpha=0.5)\n",
+    "            plt.axhline(y=0, color='r', linestyle='--')\n",
+    "            plt.title(f'Residual Plot - {name}')\n",
+    "            plt.xlabel('Predicted Values')\n",
+    "            plt.ylabel('Residuals')\n",
+    "            plt.grid(True)\n",
+    "            plt.show()\n",
+    "\n",
     "            # Plot feature importance for tree-based models\n",
     "            if hasattr(best_model, 'feature_importances_'):\n",
     "                importances = best_model.feature_importances_\n",
@@ -485,7 +495,7 @@
     "            continue\n",
     "\n",
     "    results_df = pd.DataFrame(results)\n",
-    "    # Sort by RMSE (ascending since lower is better)\n",
+    "\n",
     "    top5_models_df = results_df.sort_values(by=\"RMSE\", ascending=True).head(5).reset_index(drop=True)\n",
     "\n",
     "    return results_df, top5_models_df"
@@ -493,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
