--- a/data_exploration/initial_data_exploration.ipynb
+++ b/data_exploration/initial_data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "id": "02253a5c-ce9d-4bfd-9077-3ccafd6a06e6",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "87ac952d",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "id": "554aec3f",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "id": "ddab97f4",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
        "max             112.000000          14.800000  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "id": "7228cf02",
    "metadata": {},
    "outputs": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "id": "ceac34dd",
    "metadata": {},
    "outputs": [
@@ -588,7 +588,7 @@
        "Unemployment Rate               63"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "id": "649b8c2f",
    "metadata": {},
    "outputs": [
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "id": "8231afab",
    "metadata": {},
    "outputs": [
@@ -784,7 +784,7 @@
        "Industry Subgroup                         2    0.050251"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "id": "2990731e",
    "metadata": {},
    "outputs": [
@@ -1036,8 +1036,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "id": "155956f0-50a2-4845-94db-e87bcd63048e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reload the dataset\n",
+    "df_new = pd.read_csv(\"../build_dataset/output_csv/bloomberg_data.csv\")\n",
+    "df_new['Trade Date (US)'] = pd.to_datetime(df_new['Trade Date (US)'], errors='coerce')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d80b4d01",
    "metadata": {},
    "outputs": [
     {
@@ -1052,19 +1064,15 @@
     }
    ],
    "source": [
-    "# Reload the dataset\n",
-    "df_new = pd.read_csv(\"../build_dataset/output_csv/bloomberg_data.csv\")\n",
+    "def offer_price_distribution(df):\n",
+    "    plt.figure(figsize=(8, 5))\n",
+    "    sns.histplot(df['Offer Price'].dropna(), bins=30, kde=True)\n",
+    "    plt.xlabel('Offer Price')\n",
+    "    plt.ylabel('Frequency')\n",
+    "    plt.title('Distribution of IPO Offer Prices')\n",
+    "    plt.show()\n",
     "\n",
-    "# Convert 'Trade Date (US)' to datetime format\n",
-    "df_new['Trade Date (US)'] = pd.to_datetime(df_new['Trade Date (US)'], errors='coerce')\n",
-    "\n",
-    "# Distribution of IPO Offer Prices\n",
-    "plt.figure(figsize=(8, 5))\n",
-    "sns.histplot(df_new['Offer Price'].dropna(), bins=30, kde=True)\n",
-    "plt.xlabel('Offer Price')\n",
-    "plt.ylabel('Frequency')\n",
-    "plt.title('Distribution of IPO Offer Prices')\n",
-    "plt.show()"
+    "offer_price_distribution(df_new)"
    ]
   },
   {
@@ -1077,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "id": "3abd6da9",
    "metadata": {},
    "outputs": [
@@ -1093,13 +1101,15 @@
     }
    ],
    "source": [
-    "# Distribution of Market Capitalization at Offer\n",
-    "plt.figure(figsize=(8, 5))\n",
-    "sns.histplot(df_new['Market Cap at Offer (M)'].dropna(), bins=30, kde=True)\n",
-    "plt.xlabel('Market Cap at Offer (M)')\n",
-    "plt.ylabel('Frequency')\n",
-    "plt.title('Distribution of Market Capitalization at Offer')\n",
-    "plt.show()"
+    "def market_cap_at_offer_distribution(df):\n",
+    "    plt.figure(figsize=(8, 5))\n",
+    "    sns.histplot(df['Market Cap at Offer (M)'].dropna(), bins=30, kde=True)\n",
+    "    plt.xlabel('Market Cap at Offer (M)')\n",
+    "    plt.ylabel('Frequency')\n",
+    "    plt.title('Distribution of Market Capitalization at Offer')\n",
+    "    plt.show()\n",
+    "\n",
+    "market_cap_at_offer_distribution(df)"
    ]
   },
   {
@@ -1112,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "id": "884ebf2f",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1138,6 @@
     }
    ],
    "source": [
-    "# Number of IPOs over time\n",
     "def number_of_ipos_over_time(df):\n",
     "    df_tmp = df.copy()\n",
     "    df_tmp.set_index('Trade Date (US)', inplace=True)\n",
@@ -1156,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "id": "8a373e92",
    "metadata": {},
    "outputs": [
@@ -1172,10 +1181,9 @@
     }
    ],
    "source": [
-    "# Industry Sector Distribution\n",
     "def industry_sector_distribution(df):\n",
     "    plt.figure(figsize=(10, 5))\n",
-    "    df_new['Industry Sector'].value_counts().plot(kind='bar')\n",
+    "    df['Industry Sector'].value_counts().plot(kind='bar')\n",
     "    plt.xlabel('Industry Sector')\n",
     "    plt.ylabel('Count')\n",
     "    plt.title('Distribution of IPOs by Industry Sector')\n",
@@ -1195,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
    "id": "38900300",
    "metadata": {},
    "outputs": [
@@ -1238,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "id": "7121c5ae",
    "metadata": {},
    "outputs": [
@@ -1274,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "id": "f4a9ec79",
    "metadata": {},
    "outputs": [
