--- a/data_analysis/regression.ipynb
+++ b/data_analysis/regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "[3 rows x 26 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,21 +459,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Values</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Minimum</th>\n",
+       "      <td>-100.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Q1</th>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Median</th>\n",
+       "      <td>2.225000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Q3</th>\n",
+       "      <td>18.651162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Maximum</th>\n",
+       "      <td>507.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mean</th>\n",
+       "      <td>14.727080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Standard deviation</th>\n",
+       "      <td>34.382890</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Values\n",
+       "Minimum            -100.000000\n",
+       "Q1                    0.000000\n",
+       "Median                2.225000\n",
+       "Q3                   18.651162\n",
+       "Maximum             507.500000\n",
+       "Mean                 14.727080\n",
+       "Standard deviation   34.382890"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Distribution statistics:\n",
-      "Minimum value:  -100.0\n",
-      "Q1:  0.0\n",
-      "Median value:  2.225000024\n",
-      "Q3:  18.6511621475\n",
-      "Maximum value:  507.5\n",
-      "Mean value:  14.727079712040686\n",
-      "Standard deviation:  34.38288981181933\n",
       "\n",
       "Checking for outliers...\n",
       "Removed outliers.\n",
@@ -490,14 +553,17 @@
     "    \"\"\"\n",
     "    label = df['Offer To 1st Close']\n",
     "\n",
-    "    print('Distribution statistics:')\n",
-    "    print('Minimum value: ', label.min())\n",
-    "    print('Q1: ', label.quantile(0.25))\n",
-    "    print('Median value: ', label.median())\n",
-    "    print('Q3: ', label.quantile(0.75))\n",
-    "    print('Maximum value: ', label.max())\n",
-    "    print('Mean value: ', label.mean())\n",
-    "    print('Standard deviation: ', label.std())\n",
+    "    df_stat = pd.DataFrame([{\n",
+    "        'Minimum': label.min(),\n",
+    "        'Q1': label.quantile(0.25),\n",
+    "        'Median': label.median(),\n",
+    "        'Q3': label.quantile(0.75),\n",
+    "        'Maximum': label.max(),\n",
+    "        'Mean': label.mean(),\n",
+    "        'Standard deviation': label.std()\n",
+    "    }])\n",
+    "\n",
+    "    display(df_stat.transpose().rename(columns={0: 'Values'}))\n",
     "    print('\\nChecking for outliers...')\n",
     "    \n",
     "    df_filtered, bounds = remove_outlier(df)\n",
