--- a/data_analysis/classification.ipynb
+++ b/data_analysis/classification.ipynb
@@ -32,6 +32,7 @@
     "from sklearn.metrics import silhouette_score\n",
     "from sklearn.decomposition import PCA\n",
     "from lightgbm import LGBMClassifier\n",
+    "import os\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n"
    ]
@@ -49,6 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.makedirs('./output_csv', exist_ok=True)\n",
     "df = pd.read_csv(\"../build_dataset/output_csv/bloomberg_data.csv\")\n",
     "df = df.dropna(subset=['Offer To 1st Close'])\n",
     "df.head(3)"
