--- a/data_analysis/regression.ipynb
+++ b/data_analysis/regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.makedirs('./output_csv', exist_ok=True)\n",
     "df = pd.read_csv('../build_dataset/output_csv/bloomberg_data.csv')\n",
     "df = df.dropna(subset=['Offer To 1st Close'])\n",
     "df.head(3)"
