--- a/build_dataset/build_dataset.ipynb
+++ b/build_dataset/build_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,18 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates as mdates\n",
     "import matplotlib.ticker as ticker\n",
-    "import matplotlib.dates as mdates"
+    "import matplotlib.dates as mdates\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.makedirs('./output_csv', exist_ok=True)\n",
+    "os.makedirs('./input_csv', exist_ok=True)"
    ]
   },
   {
