--- a/classification/classification.ipynb
+++ b/classification/classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "id": "e0852c7e",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 10,
    "id": "37460ef2",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 11,
    "id": "8b5ca010",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 12,
    "id": "41ddef1a",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 13,
    "id": "bfb09d14",
    "metadata": {},
    "outputs": [
@@ -189,6 +189,102 @@
     "print(f'Test Accuracy :{test_accuracy}')\n",
     "print(f'Test F1 Score :{test_f1}')\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1e32e7f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_dev = pd.read_csv('Final_Output_Class_dev_tomek.csv')\n",
+    "df_test = pd.read_csv('Final_Output_Class_test.csv')\n",
+    "#SPlit the label\n",
+    "label_dev = df_dev['Underpriced']\n",
+    "label_test = df_test['Underpriced']\n",
+    "#Drop the label column\n",
+    "df_dev = df_dev.drop(columns='Underpriced')\n",
+    "df_test = df_test.drop(columns='Underpriced')\n",
+    "\n",
+    "x_train,x_dev,y_train,y_dev = train_test_split(df_dev,label_dev,test_size=0.2,random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6b1c97fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 15360 candidates, totalling 76800 fits\n",
+      "Best F1 Score on Dev Set: 0.8794788273615635\n",
+      "Best Hyperparameters:\n",
+      "{'bootstrap': False, 'class_weight': 'balanced', 'criterion': 'entropy', 'max_depth': None, 'max_features': 'log2', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 300}\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf = RandomForestClassifier(random_state=42,class_weight=None)\n",
+    "#Use grid search for the optimal hyperparameter\n",
+    "param_grid = {\n",
+    "    'n_estimators': [100, 200, 300, 500],\n",
+    "    'max_depth': [None, 10, 15, 20, 30],\n",
+    "    'min_samples_split': [2, 5, 10, 15],\n",
+    "    'min_samples_leaf': [1, 2, 3, 5],\n",
+    "    'max_features': ['sqrt', 'log2', 0.3, 0.5],\n",
+    "    'bootstrap': [True, False],\n",
+    "    'criterion': ['gini', 'entropy'],\n",
+    "    'class_weight': [None, 'balanced', 'balanced_subsample']\n",
+    "}\n",
+    "\n",
+    "grid_search = GridSearchCV(\n",
+    "    estimator=rf,\n",
+    "    param_grid=param_grid,\n",
+    "    scoring='f1',\n",
+    "    cv=StratifiedKFold(n_splits=5, shuffle=True, random_state=42),\n",
+    "    n_jobs=-1,\n",
+    "    verbose=2\n",
+    ")\n",
+    "\n",
+    "grid_search.fit(x_train,y_train)\n",
+    "\n",
+    "best_rf = grid_search.best_estimator_\n",
+    "y_dev_pred = best_rf.predict(x_dev)\n",
+    "best_f1 = f1_score(y_dev, y_dev_pred)\n",
+    "\n",
+    "print(f\"Best F1 Score on Dev Set: {best_f1}\")\n",
+    "print(\"Best Hyperparameters:\")\n",
+    "print(grid_search.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "555cf577",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy :0.7865311308767471\n",
+      "Test F1 Score :0.13402061855670103\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_pred = best_rf.predict(df_test)\n",
+    "#Compute Training Accuracy\n",
+    "test_accuracy = best_rf.score(df_test,label_test)\n",
+    "#Compute F1 score\n",
+    "test_f1 = f1_score(label_test, test_pred)\n",
+    "\n",
+    "print(f'Test Accuracy :{test_accuracy}')\n",
+    "print(f'Test F1 Score :{test_f1}')"
    ]
   }
  ],
