--- a/build_dataset/build_dataset.ipynb
+++ b/build_dataset/build_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,26 +28,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_bloomberg = pd.read_csv('./input_csv/bloomberg_data_raw.csv', index_col=0)"
+    "df_bloomberg = pd.DataFrame()\n",
+    "\n",
+    "for year in range(2000, 2026):\n",
+    "    try:\n",
+    "        df_year = pd.read_csv(f\"./input_csv/bloomberg_raw/{year}.csv\")\n",
+    "        df_bloomberg = pd.concat([df_bloomberg, df_year])\n",
+    "    except FileNotFoundError:\n",
+    "        continue"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_bloomberg['Trade Date (US)'] = pd.to_datetime(df_bloomberg['Trade Date (US)'], errors='coerce')\n",
-    "df_bloomberg['Trade Date (US) FoM'] = df_bloomberg['Trade Date (US)'].dt.to_period('M').dt.to_timestamp()"
+    "df_bloomberg['Filing Term Price Range'] = df_bloomberg['Filing Term Price Range'].str.replace('\\n', '').str.strip()\n",
+    "df_bloomberg['Trade Date (US)'] = pd.to_datetime(df_bloomberg['Trade Date (US)'], format='%m/%d/%y', errors='coerce')\n",
+    "df_bloomberg['Trade Date (US) FoM'] = df_bloomberg['Trade Date (US)'].dt.to_period('M').dt.to_timestamp()\n",
+    "df_bloomberg = df_bloomberg.dropna(thresh=int(df_bloomberg.shape[1] * 0.8))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
