--- a/data_analysis/classification.ipynb
+++ b/data_analysis/classification.ipynb
@@ -603,7 +603,7 @@
     "        print('The data is balanced. No resampling applied.')\n",
     "        return df\n",
     "\n",
-    "df_dev_resampled_under = checkimbalance_under(df_dev_correlation, 'Final_Output_Class_dev_under.csv')"
+    "df_dev_resampled_under = checkimbalance_under(df_dev_correlation, './output_csv/Final_Output_Class_dev_under.csv')"
    ]
   },
   {
