--- a/data_analysis/regression.ipynb
+++ b/data_analysis/regression.ipynb
@@ -957,6 +957,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_best_model(model_params, X, y, top5_models_df):\n",
+    "    \"\"\"\n",
+    "    Evaluate the best model on the test set\n",
+    "    \"\"\"\n",
+    "    df_test = pd.read_csv('./output_csv/Final_Output_Reg_test.csv')\n",
+    "    X_test, y_test = split_data(df_test)\n",
+    "    X_test = clean_column_names(X_test)\n",
+    "\n",
+    "    best_model_name = top5_models_df.iloc[0]['Model']\n",
+    "    best_model = model_params[best_model_name]['model']\n",
+    "    best_model.fit(X, y)\n",
+    "\n",
+    "    y_pred = best_model.predict(X_test)\n",
+    "    test_metrics = {\n",
+    "        \"Model\": best_model_name,\n",
+    "        \"RMSE\": np.sqrt(mean_squared_error(y_test, y_pred)),\n",
+    "        \"MAE\": mean_absolute_error(y_test, y_pred),\n",
+    "        \"R² Score\": r2_score(y_test, y_pred)\n",
+    "    }\n",
+    "\n",
+    "    metrics_df = pd.DataFrame([test_metrics])\n",
+    "    metrics_df.to_csv('./output_csv/best_model_Reg_test_results.csv', index=False)\n",
+    "\n",
+    "    print(\"\\nTest Set Performance:\")\n",
+    "    display(metrics_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 86,
    "metadata": {},
    "outputs": [],
@@ -967,15 +1000,17 @@
     "        X, y = split_data(df_dev)\n",
     "        X = clean_column_names(X)\n",
     "        X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "        \n",
+    "\n",
     "        model_params = get_enhanced_model_params()\n",
     "        results_df, top5_models_df = evaluate_models(model_params, X_train, y_train, X_val, y_val)\n",
-    "        \n",
+    "\n",
     "        print(\"\\nTop 5 Models:\")\n",
     "        display(top5_models_df)\n",
-    "        \n",
+    "\n",
     "        results_df.to_csv('./output_csv/regression_results.csv', index=False)\n",
     "        top5_models_df.to_csv('./output_csv/top5_regression_models.csv', index=False)\n",
+    "\n",
+    "        evaluate_best_model(model_params, X, y, top5_models_df)\n",
     "        \n",
     "    except Exception as e:\n",
     "        print(f\"Error in main execution: {str(e)}\")\n",
