--- a/data_analysis/regression.ipynb
+++ b/data_analysis/regression.ipynb
@@ -763,14 +763,14 @@
     "                \"l1_ratio\": [0.1, 0.3, 0.5, 0.7, 0.9]\n",
     "            }\n",
     "        },\n",
-    "        # \"Support Vector Regressor\": {\n",
-    "        #     \"model\": SVR(),\n",
-    "        #     \"params\": {\n",
-    "        #         \"kernel\": [\"rbf\", \"poly\"],\n",
-    "        #         \"C\": [0.1, 1, 10],\n",
-    "        #         \"gamma\": [\"scale\", \"auto\"]\n",
-    "        #     }\n",
-    "        # },\n",
+    "        \"Support Vector Regressor\": {\n",
+    "            \"model\": SVR(),\n",
+    "            \"params\": {\n",
+    "                \"kernel\": [\"rbf\", \"poly\"],\n",
+    "                \"C\": [0.1, 1, 10],\n",
+    "                \"gamma\": [\"scale\", \"auto\"]\n",
+    "            }\n",
+    "        },\n",
     "        \"LightGBM\": {\n",
     "            \"model\": LGBMRegressor(\n",
     "                random_state=42,\n",
