--- a/data_analysis/classification.ipynb
+++ b/data_analysis/classification.ipynb
@@ -496,7 +496,7 @@
     "    labels = ['Underpriced', 'Not Underpriced']\n",
     "    colors = ['lightblue', '#212351']\n",
     "\n",
-    "    wedges, texts, autotexts = plt.pie(\n",
+    "    _, _, autotexts = plt.pie(\n",
     "        underpriced_counts, labels=labels, colors=colors,\n",
     "        autopct='%1.1f%%', textprops={'color': 'black'}\n",
     "    )\n",
