--- a/data_analysis/classification.ipynb
+++ b/data_analysis/classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "[3 rows x 24 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
     "    \"\"\"\n",
     "    Checking imbalance in the target data. \n",
     "\n",
-    "    If imbalance, resample using SMOTE.\n",
+    "    If imbalance, resample using Undersamping.\n",
     "    \"\"\"\n",
     "    X_dev = df.drop(columns=['Underpriced'])\n",
     "    y_dev = df['Underpriced']\n",
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,9 +754,13 @@
     "        \"Random Forest Classifier\": {\n",
     "            \"model\": RandomForestClassifier(random_state=42, n_jobs=-1),\n",
     "            \"params\": {\n",
-    "                \"n_estimators\": [100, 200],\n",
-    "                \"max_depth\": [None, 10, 20],\n",
-    "                \"max_features\": [\"sqrt\", \"log2\"]\n",
+    "                'n_estimators': [100, 200],\n",
+    "                'max_depth': [10, 15],\n",
+    "                'min_samples_split': [5, 10],\n",
+    "                'min_samples_leaf': [3, 5],\n",
+    "                'max_features': ['sqrt'],\n",
+    "                'bootstrap': [True],\n",
+    "                'criterion': ['gini']\n",
     "            }\n",
     "        },\n",
     "        \"K-Nearest Neighbors\": {\n",
@@ -810,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1335,7 +1339,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1349,7 +1353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
