--- a/build_dataset/build_dataset.ipynb
+++ b/build_dataset/build_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,45 +44,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_bloomberg['Filing Term Price Range'] = df_bloomberg['Filing Term Price Range'].str.replace('\\n', '').str.strip()\n",
     "df_bloomberg['Trade Date (US)'] = pd.to_datetime(df_bloomberg['Trade Date (US)'], format='%m/%d/%y', errors='coerce')\n",
-    "df_bloomberg['Trade Date (US) FoM'] = df_bloomberg['Trade Date (US)'].dt.to_period('M').dt.to_timestamp()\n",
-    "df_bloomberg = df_bloomberg.dropna(thresh=int(df_bloomberg.shape[1] * 0.7))"
+    "df_bloomberg['Trade Date (US) FoM'] = df_bloomberg['Trade Date (US)'].dt.to_period('M').dt.to_timestamp()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_dff = pd.read_csv('./input_csv/DFF.csv')\n",
-    "df_dff.rename(columns={'observation_date': 'Trade Date (US) FoM'}, inplace=True)\n",
-    "df_dff['Trade Date (US) FoM'] = pd.to_datetime(df_dff['Trade Date (US) FoM'], errors='coerce')\n",
-    "\n",
-    "\n",
-    "df_cpi = pd.read_csv('./input_csv/CPI.csv')\n",
-    "df_cpi.rename(columns={'observation_date': 'Trade Date (US) FoM'}, inplace=True)\n",
-    "df_cpi['Trade Date (US) FoM'] = pd.to_datetime(df_cpi['Trade Date (US) FoM'], errors='coerce')\n",
-    "\n",
-    "\n",
-    "df_csent = pd.read_csv('./input_csv/UMCSENT.csv')\n",
-    "df_csent.rename(columns={'observation_date': 'Trade Date (US) FoM'}, inplace=True)\n",
-    "df_csent['Trade Date (US) FoM'] = pd.to_datetime(df_csent['Trade Date (US) FoM'], errors='coerce')\n",
-    "\n",
-    "\n",
-    "df_unrate = pd.read_csv('./input_csv/UNRATE.csv')\n",
-    "df_unrate.rename(columns={'observation_date': 'Trade Date (US) FoM'}, inplace=True)\n",
-    "df_unrate['Trade Date (US) FoM'] = pd.to_datetime(df_unrate['Trade Date (US) FoM'], errors='coerce')\n"
+    "def clean_macroeconomic_data(file_name):\n",
+    "    tmp = pd.read_csv(file_name)\n",
+    "    tmp['observation_date'] = pd.to_datetime(tmp['observation_date']).dt.to_period('M').dt.to_timestamp()\n",
+    "    tmp = tmp.groupby('observation_date').mean().reset_index()\n",
+    "    tmp.rename(columns={'observation_date': 'Trade Date (US) FoM'}, inplace=True)\n",
+    "    tmp['Trade Date (US) FoM'] = pd.to_datetime(tmp['Trade Date (US) FoM'], errors='coerce')\n",
+    "    return tmp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_dff = clean_macroeconomic_data('./input_csv/DFF.csv')\n",
+    "df_cpi = clean_macroeconomic_data('./input_csv/CPI.csv')\n",
+    "df_csent = clean_macroeconomic_data('./input_csv/UMCSENT.csv')\n",
+    "df_unrate = clean_macroeconomic_data('./input_csv/UNRATE.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,11 +102,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_bloomberg.rename(columns={'CPALTT01USM657N': 'CPI',\n",
+    "df_bloomberg.rename(columns={'CPILFESL': 'CPI',\n",
     "                              'DFF': 'Fed Rate',\n",
     "                              'UMCSENT': 'Consumer Confidence',\n",
     "                              'UNRATE': 'Unemployment Rate'\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
